--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css".css">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <title>Snake Game</title>
   </head>
   <body>
+    <div class="score">score: <span class="score--value">00</span><
+    <div class="menu-screen">
+      <span class="game-over">game over</span>
+      <span class="final-score">score <span>00</span></span>
+
+      <button class="btn-paly">
+        <span class="material-symbols-outlined"> play_circle </span>
+        Jogar Novamente
+      </button>
+    </div>
     <canvas width="600" height="600"></canvas>
 
     <script src="js/script.js"></script>
