--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Snake Game</title>
   </head>
   <body>
-    <div class="score">score: <span class="score--value">00</span><
+    <div class="score">score: <span class="score--value">00</span></div>
     <div class="menu-screen">
       <span class="game-over">game over</span>
       <span class="final-score">score <span>00</span></span>
@@ -21,6 +21,7 @@
         Jogar Novamente
       </button>
     </div>
+
     <canvas width="600" height="600"></canvas>
 
     <script src="js/script.js"></script>
